--- a/index.html
+++ b/index.html
@@ -896,26 +896,59 @@ Review the returned parts and take the necessary action to return them to stock 
     // ============================================================
 
     const INITIAL_GLOSSARY = [
-      { id: '1', type: 'abbreviation', name: 'AOG', meaning: 'Aircraft On Ground', context: 'Highest priority for flight operations', category: 'Operations' },
-      { id: '2', type: 'abbreviation', name: 'AWB', meaning: 'Airway Bill', context: 'Tracking number', category: 'Documents' },
-      { id: '3', type: 'abbreviation', name: 'PN', meaning: 'Part Number', category: 'General' },
-      { id: '4', type: 'abbreviation', name: 'SN', meaning: 'Serial Number', category: 'General' },
-      { id: '5', type: 'abbreviation', name: 'S/V', meaning: 'Serviceable', context: 'Part condition', category: 'Part Conditions' },
-      { id: '6', type: 'abbreviation', name: 'U/S', meaning: 'Unserviceable', context: 'Part condition', category: 'Part Conditions' },
-      { id: '7', type: 'abbreviation', name: 'O/H', meaning: 'Overhauled', context: 'Part condition', category: 'Part Conditions' },
-      { id: '8', type: 'abbreviation', name: 'F/N', meaning: 'Factory New', context: 'Part condition', category: 'Part Conditions' },
-      { id: '9', type: 'term', name: 'Rotable', meaning: 'Aircraft components that can be repaired and reused', category: 'Parts' },
-      { id: '10', type: 'term', name: 'Consumable', meaning: 'Parts that can only be used once', category: 'Parts' },
-      { id: '11', type: 'term', name: 'Core', meaning: 'The unserviceable unit in an exchange transaction', category: 'Parts' },
-      { id: '12', type: 'term', name: 'Exchange', meaning: 'Serviceable unit received when returning a core unit', category: 'Parts' },
-      { id: '13', type: 'abbreviation', name: 'Form 1', meaning: 'EASA Authorized Release Certificate', category: 'Documents' },
-      { id: '14', type: 'abbreviation', name: '8130-3', meaning: 'FAA Airworthiness Approval Tag', category: 'Documents' },
-      { id: '15', type: 'abbreviation', name: 'COC', meaning: 'Certificate of Conformance', context: 'Also written as CofC', category: 'Documents' },
-      { id: '16', type: 'abbreviation', name: 'EASA', meaning: 'European Union Aviation Safety Agency', category: 'Organizations' },
-      { id: '17', type: 'abbreviation', name: 'FAA', meaning: 'Federal Aviation Administration', category: 'Organizations' },
-      { id: '18', type: 'abbreviation', name: 'AMS', meaning: 'Aircraft Management System', context: 'Our inventory and ordering system', category: 'Systems' },
-      { id: '19', type: 'abbreviation', name: 'PO', meaning: 'Purchase Order', category: 'General' },
-      { id: '20', type: 'abbreviation', name: 'GMT', meaning: 'Ground Maintenance Technics', context: 'Company name of the mechanics servicing Airseven', category: 'Organizations' },
+      // === ABBREVIATIONS ===
+      { id: '1', type: 'abbreviation', name: 'AMS', meaning: 'Aircraft Management System', context: 'Our inventory and ordering system', category: 'Systems' },
+      { id: '2', type: 'abbreviation', name: 'AOG', meaning: 'Aircraft On Ground', context: 'Highest priority for flight operations', category: 'Operations' },
+      { id: '3', type: 'abbreviation', name: 'AWB', meaning: 'Airway Bill', context: 'Tracking number', category: 'Documents' },
+      { id: '4', type: 'abbreviation', name: 'CAMO', meaning: 'Continuing Airworthiness Management Organisation', context: 'The person/team in charge of paperwork and compliance of aircraft', category: 'Organizations' },
+      { id: '5', type: 'abbreviation', name: 'CL', meaning: 'Classic', context: 'Used in aircraft model names', category: 'General' },
+      { id: '6', type: 'abbreviation', name: 'COA', meaning: 'Certificate of Analysis', context: 'Certification type', category: 'Documents' },
+      { id: '7', type: 'abbreviation', name: 'COC', meaning: 'Certificate of Compliance', context: 'Also written as CofC. Certification type', category: 'Documents' },
+      { id: '8', type: 'abbreviation', name: 'CRIT', meaning: 'Critical', category: 'Operations' },
+      { id: '9', type: 'abbreviation', name: 'CSI', meaning: 'Cycles Since Installation', category: 'Operations' },
+      { id: '10', type: 'abbreviation', name: 'EASA', meaning: 'European Union Aviation Safety Agency', context: 'EU aviation agency', category: 'Organizations' },
+      { id: '11', type: 'abbreviation', name: 'FAA', meaning: 'Federal Aviation Administration', context: 'US aviation agency', category: 'Organizations' },
+      { id: '12', type: 'abbreviation', name: 'F/N', meaning: 'Factory New', context: 'Part condition', category: 'Part Conditions' },
+      { id: '13', type: 'abbreviation', name: 'GMT', meaning: 'Ground Maintenance Technics', context: 'Company name of the mechanics servicing Airseven', category: 'Organizations' },
+      { id: '14', type: 'abbreviation', name: 'N/S', meaning: 'New Surplus', context: 'Part condition', category: 'Part Conditions' },
+      { id: '15', type: 'abbreviation', name: 'NE', meaning: 'New', context: 'Part condition', category: 'Part Conditions' },
+      { id: '16', type: 'abbreviation', name: 'NG', meaning: 'Next Generation', context: 'Used in aircraft model names', category: 'General' },
+      { id: '17', type: 'abbreviation', name: 'OEM', meaning: 'Original Equipment Manufacturer', context: 'The original manufacturer, or made by the original manufacturer', category: 'Parts' },
+      { id: '18', type: 'abbreviation', name: 'O/H', meaning: 'Overhauled', context: 'Part condition', category: 'Part Conditions' },
+      { id: '19', type: 'abbreviation', name: 'PBH', meaning: 'Power By the Hour', context: 'Used in contractual agreements for hour rate payment', category: 'Operations' },
+      { id: '20', type: 'abbreviation', name: 'PMA', meaning: 'Parts Manufacturer Approval', context: 'Used for aftermarket parts manufactured under OEM approval', category: 'Parts' },
+      { id: '21', type: 'abbreviation', name: 'PN', meaning: 'Part Number', category: 'General' },
+      { id: '22', type: 'abbreviation', name: 'PO', meaning: 'Purchase Order', category: 'Documents' },
+      { id: '23', type: 'abbreviation', name: 'QTY', meaning: 'Quantity', category: 'General' },
+      { id: '24', type: 'abbreviation', name: 'RFQ', meaning: 'Request For Quote', context: 'When requesting price and lead time with suppliers', category: 'Operations' },
+      { id: '25', type: 'abbreviation', name: 'SL', meaning: 'Shelf Life', context: 'Expiry date', category: 'Part Conditions' },
+      { id: '26', type: 'abbreviation', name: 'SN', meaning: 'Serial Number', category: 'General' },
+      { id: '27', type: 'abbreviation', name: 'SO', meaning: 'Sales Order', category: 'Documents' },
+      { id: '28', type: 'abbreviation', name: 'S/V', meaning: 'Serviceable', context: 'Part condition', category: 'Part Conditions' },
+      { id: '29', type: 'abbreviation', name: 'TN', meaning: 'Tracking Number', context: 'The tracking number used in AMS', category: 'General' },
+      { id: '30', type: 'abbreviation', name: 'U/M', meaning: 'Unit of Measurement', category: 'General' },
+      { id: '31', type: 'abbreviation', name: 'UOM', meaning: 'Unit of Measurement', category: 'General' },
+      { id: '32', type: 'abbreviation', name: 'U/S', meaning: 'Unserviceable', context: 'Part condition', category: 'Part Conditions' },
+      { id: '33', type: 'abbreviation', name: 'WO', meaning: 'Work Order', category: 'Documents' },
+      { id: '34', type: 'abbreviation', name: 'WR', meaning: 'Work Report', category: 'Documents' },
+      // === TERMS ===
+      { id: '35', type: 'term', name: 'Airworthiness release', meaning: 'Certificate confirming an aircraft or component meets airworthiness standards', category: 'Documents' },
+      { id: '36', type: 'term', name: 'Consumable', meaning: 'Parts that can only be used once', category: 'Parts' },
+      { id: '37', type: 'term', name: 'Core', meaning: 'The unserviceable unit in an exchange transaction. Exchange and Core units are linked — Core is the unserviceable unit returned to the supplier', category: 'Parts' },
+      { id: '38', type: 'term', name: 'Cycle', meaning: 'One takeoff and one landing. Used for historic data on rotable components', category: 'Operations' },
+      { id: '39', type: 'term', name: 'Dropshipping', meaning: 'Delivery directly from supplier to end-use location', category: 'Operations' },
+      { id: '40', type: 'term', name: 'Dual Release', meaning: 'A statement on the FAA 8130-3 that confirms compliance with EASA regulations', category: 'Documents' },
+      { id: '41', type: 'term', name: 'Exchange', meaning: 'Used when buying rotable components. Exchange and Core units are linked. Exchange is the serviceable unit and Core is the unserviceable unit', category: 'Parts' },
+      { id: '42', type: 'term', name: 'Form 1', meaning: 'EASA Authorized Release Certificate', category: 'Documents' },
+      { id: '43', type: 'term', name: '8130-3', meaning: 'FAA Airworthiness Approval Tag', category: 'Documents' },
+      { id: '44', type: 'term', name: 'Hardware', meaning: 'Screws, nuts, bolts, washers, pins etc.', category: 'Parts' },
+      { id: '45', type: 'term', name: 'Line Station', meaning: 'The airport where the mechanics are performing maintenance on the aircraft', category: 'Operations' },
+      { id: '46', type: 'term', name: 'Lot number', meaning: 'A batch-specific identifier, essentially the same as a tracking number', category: 'General' },
+      { id: '47', type: 'term', name: 'Red tag', meaning: 'A small document for unserviceable parts. It contains PN/SN data along with removal date and other relevant information', category: 'Documents' },
+      { id: '48', type: 'term', name: 'Rotable', meaning: 'Aircraft components that can be repaired and reused', category: 'Parts' },
+      { id: '49', type: 'term', name: 'Traceability', meaning: 'Term used for the life-history of a part, item or aircraft. Traceability is required to establish the timeline of production, distribution, installation and/or repair of any part', category: 'General' },
+      { id: '50', type: 'term', name: 'Tracking number', meaning: 'Tracking or Lot numbers is a batch specific ID. AMS uses the term "tracking number", but it\'s essentially the same as a lot or batch number', category: 'General' },
+      { id: '51', type: 'term', name: 'U/S tag', meaning: 'A tag placed on unserviceable parts, also known as a Red tag', category: 'Documents' },
     ];
 
     // ============================================================
