--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
         await db.collection(collectionName).doc(id).delete();
       },
 
+      // -- Clear: delete all documents in a collection --
+      async clearCollection(collectionName) {
+        if (!db) return;
+        const snapshot = await db.collection(collectionName).get();
+        const batch = db.batch();
+        snapshot.docs.forEach(doc => batch.delete(doc.ref));
+        await batch.commit();
+      },
+
       // -- Seed: write default data with specific doc IDs --
       async seedCollection(collectionName, items) {
         if (!db) return;
@@ -895,6 +904,8 @@ Review the returned parts and take the necessary action to return them to stock 
     // DEFAULT GLOSSARY DATA
     // ============================================================
 
+    const GLOSSARY_VERSION = 2; // Bump this to force a re-seed of glossary data
+
     const INITIAL_GLOSSARY = [
       // === ABBREVIATIONS ===
       { id: '1', type: 'abbreviation', name: 'AMS', meaning: 'Aircraft Management System', context: 'Our inventory and ordering system', category: 'Systems' },
@@ -1180,9 +1191,12 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                 await FirestoreService.seedCollection('sops', DEFAULT_SOPS);
                 loadedSops = DEFAULT_SOPS;
               }
-              if (loadedGlossary.length === 0) {
+              const savedGlossaryVersion = parseInt(localStorage.getItem('sop_bot_glossary_version') || '0');
+              if (loadedGlossary.length === 0 || savedGlossaryVersion < GLOSSARY_VERSION) {
+                await FirestoreService.clearCollection('glossary');
                 await FirestoreService.seedCollection('glossary', INITIAL_GLOSSARY);
                 loadedGlossary = INITIAL_GLOSSARY;
+                localStorage.setItem('sop_bot_glossary_version', String(GLOSSARY_VERSION));
               }
               if (loadedContacts.length === 0) {
                 await FirestoreService.seedCollection('contacts', INITIAL_CONTACTS);
@@ -1219,7 +1233,13 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             setDataSource('local');
           }
           if (!loadedGlossary) {
-            loadedGlossary = LocalStorage.getGlossary() || INITIAL_GLOSSARY;
+            const savedGlossaryVersion = parseInt(localStorage.getItem('sop_bot_glossary_version') || '0');
+            if (savedGlossaryVersion < GLOSSARY_VERSION) {
+              loadedGlossary = INITIAL_GLOSSARY;
+              localStorage.setItem('sop_bot_glossary_version', String(GLOSSARY_VERSION));
+            } else {
+              loadedGlossary = LocalStorage.getGlossary() || INITIAL_GLOSSARY;
+            }
             LocalStorage.saveGlossary(loadedGlossary);
           }
           if (!loadedContacts) {
